--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                   <img src="images/voisin.png" alt="voisin" />
                 </div>
                 <div class="card-desc">
-                  <h4>Voisin Sauveteurs<span class="badge">2021</span></h4>
+                  <h5>Voisin Sauveteurs<span class="badge">2021</span></h5>
                   <p>
                     This mobile app can help save your life by alerting your
                     neighbors when you are in crisis at home.
@@ -166,7 +166,7 @@
                   <img src="images/leboncoin.png" alt="leboncoin" />
                 </div>
                 <div class="card-desc">
-                  <h4>Leboncoin clone<span class="badge">2020</span></h4>
+                  <h5>Leboncoin clone<span class="badge">2020</span></h5>
                   <p>
                     Leboncoin is a french classifieds web app.
                     <br />
@@ -184,26 +184,31 @@
                       >Visit site</a
                     >
                   </div>
-                </div>
-                <div class="repo-links">
-                  <a
-                    class=""
-                    href="https://github.com/sebkpf/leboncoin-react"
-                    target="_blank"
-                    rel="noopener"
-                    title="frontend repo"
-                  >
-                    Frontend repo
-                  </a>
-                  <a
-                    class=""
-                    href="https://github.com/sebkpf/leboncoin-backend"
-                    target="_blank"
-                    rel="noopener"
-                    title="backend repo"
-                  >
-                    Backend repo
-                  </a>
+                  <div class="code">
+                    <h4>Source code</h4>
+                    <div class="repo-links">
+                      <a
+                        class=""
+                        href="https://github.com/sebkpf/leboncoin-react"
+                        target="_blank"
+                        rel="noopener"
+                        title="frontend repo"
+                      >
+                        <span class="icon-github"></span>
+                        Frontend
+                      </a>
+                      <a
+                        class=""
+                        href="https://github.com/sebkpf/leboncoin-backend"
+                        target="_blank"
+                        rel="noopener"
+                        title="backend repo"
+                      >
+                        <span class="icon-github"></span>
+                        Backend
+                      </a>
+                    </div>
+                  </div>
                 </div>
               </article>
             </li>
@@ -213,7 +218,7 @@
                   <img src="images/formnest.png" alt="formnest" />
                 </div>
                 <div class="card-desc">
-                  <h4>Formnest<span class="badge">2020</span></h4>
+                  <h5>Formnest<span class="badge">2020</span></h5>
                   <p>A simple form generator.</p>
                   <div class="card-cta">
                     <a
@@ -234,7 +239,7 @@
                   <img src="images/marvel.png" alt="marvel" />
                 </div>
                 <div class="card-desc">
-                  <h4>Marvel wiki<span class="badge">2020</span></h4>
+                  <h5>Marvel wiki<span class="badge">2020</span></h5>
                   <p>
                     Using Marvel's own API, this web app features searching for
                     characters and comics issues and to favorite these items.
@@ -249,25 +254,30 @@
                       >Visit site</a
                     >
                   </div>
-                  <div class="repo-links">
-                    <a
-                      class=""
-                      href="https://github.com/sebkpf/marvel-react"
-                      target="_blank"
-                      rel="noopener"
-                      title="frontend repo"
-                    >
-                      Frontend repo
-                    </a>
-                    <a
-                      class=""
-                      href="https://github.com/sebkpf/marvel-backend"
-                      target="_blank"
-                      rel="noopener"
-                      title="backend repo"
-                    >
-                      Backend repo
-                    </a>
+                  <div class="code">
+                    <h4>Source code</h4>
+                    <div class="repo-links">
+                      <a
+                        class=""
+                        href="https://github.com/sebkpf/marvel-react"
+                        target="_blank"
+                        rel="noopener"
+                        title="frontend repo"
+                      >
+                        <span class="icon-github"></span>
+                        Frontend
+                      </a>
+                      <a
+                        class=""
+                        href="https://github.com/sebkpf/marvel-backend"
+                        target="_blank"
+                        rel="noopener"
+                        title="backend repo"
+                      >
+                        <span class="icon-github"></span>
+                        Backend
+                      </a>
+                    </div>
                   </div>
                 </div>
               </article>
